--- a/.gitignore
+++ b/.gitignore
@@ -159,3 +159,16 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 Anaconda3-2024.02-1-Linux-x86_64.sh
+
+# mlflow
+mlruns/
+mlartifacts/
+artifacts/
+mlflow.db
+
+# data
+data/
+
+# pickle files
+output/
+
